--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dataconnect/generated": "file:src/dataconnect-generated",
+    "@google/genai": "^1.20.0",
+    "firebase": "^12.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@google/genai": "^1.20.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
